--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
-<!DOCTYPE html>
 <html>
-    <body>
-        <h1>Help</h1>
-    </body>
+ <head>
+  <title>Bestie is slayest</title>
+ </head>
+ <body>
+  My bestie is slayest
+  thankyou for slay
+ </body>
 </html>
