--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
  <head>
-  <title>Bestie is slayest</title>
+  <title>My bestie is slay queen</title>
+  <link rel="icon" type="image/x-icon" href="/_images/siteIcon.ico">
  </head>
  <body>
-  My bestie is slayest
-  thankyou for slay
+     <p>my bestie is slayest queen</p>
+     <p>absolutely the slayest</p>
+     <p>thank you for slay</p>
  </body>
 </html>
