--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
  <head>
   <title>My bestie is slay queen</title>
-  <link rel="icon" type="image/x-icon" href="/_images/siteIcon.ico">
+  <link rel="icon" type="image/x-icon" href="/images/siteIcon.ico">
  </head>
  <body>
      <p>my bestie is slayest queen</p>
