--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html>
- <head>
-  <title>My bestie is slay queen</title>
-  <link rel="icon" type="image/x-icon" href="/images/siteIcon.ico">
- </head>
- <body>
-     <p>my bestie is slayest queen</p>
-     <p>absolutely the slayest</p>
-     <p>thank you for slay</p>
- </body>
+
+    <head>
+        <title>My bestie is slay queen</title>
+        <link rel="icon" type="image/x-icon" href="/images/siteIcon.ico">
+    </head>
+    <section>
+
+        <body>
+            <p>my bestie is slayest queen</p>
+            <p>absolutely the slayest</p>
+            <p>thank you for slay</p>
+        </body>
+    </section>
+
+    <section id="slay">
+
+        <body>
+            <p>you are so slau</p>
+            <p>slay queen</p>
+            <p>\<\3 </p>
+        </body>
+    </section>
+
 </html>
