--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ figcaption
                 <main style="color:#232129;padding:96px;font-family:-apple-system, Roboto, sans-serif, serif">
                     <title>Slay Queen</title>
                     <link rel="icon" type="image/x-icon" href="/heart.ico">
-                    <h1 style="margin-top:0;margin-bottom:64px;max-width:320px;font-size:24px">Natalie (bestie)
+                    <h1 style="margin-top:0;margin-bottom:64px;max-width:320px;font-size:24px">Natalie
                         <!-- --><br /><span style="color:#A1CAAE;font-size:48px;margin-bottom:48px">is the Slayest 👑</span>
                     </h1>
                     <p style="margin-bottom:48px"><i>thank you for all the slay
