--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
             <style data-emotion="css-global 0"></style>
             <div style="outline:none" tabindex="-1" id="gatsby-focus-wrapper">
                 <main style="color:#232129;padding:96px;font-family:-apple-system, Roboto, sans-serif, serif">
-                    <title>Slay Queen</title>
+                    <title>slay Queen</title>
                     <link rel="icon" type="image/x-icon" href="/heart.ico">
                     <h1 style="margin-top:0;margin-bottom:64px;max-width:320px;font-size:24px">Natalie
-                        <!-- --><br /><span style="color:#A1CAAE;font-size:48px;margin-bottom:48px">is the Slayest 👑</span>
+                        <!-- --><br /><span style="color:#A1CAAE;font-size:48px;margin-bottom:48px">is the slayest 👑</span>
                     </h1>
                     <p style="margin-bottom:48px"><i>thank you for all the slay
                             <!-- -->&lt;3
                             <!-- -->
                         </i></p>
                     <ul style="margin-bottom:96px;padding-left:0">
-                        <li style="font-weight:300;font-size:24px;max-width:560px;margin-bottom:30px;color:#FFC0CB"><span><a style="color:#8954A8;font-weight:bold;font-size:22px;vertical-align:5%"><i>How Slay?</i></a>
+                        <li style="font-weight:300;font-size:24px;max-width:560px;margin-bottom:30px;color:#FFC0CB"><span><a style="color:#8954A8;font-weight:bold;font-size:22px;vertical-align:5%"><i>How slay?</i></a>
                                 <p style="color:#232129;font-size:14px;margin-top:10px;margin-bottom:0;line-height:1.25">too slay.</p>
                             </span></li>
                     </ul><img alt="❤️" />
