--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <style data-emotion="css-global 0"></style>
             <div style="outline:none" tabindex="-1" id="gatsby-focus-wrapper">
                 <main style="color:#232129;padding:96px;font-family:-apple-system, Roboto, sans-serif, serif">
-                    <title>slay Queen</title>
+                    <title>Slay Queen</title>
                     <link rel="icon" type="image/x-icon" href="/heart.ico">
                     <h1 style="margin-top:0;margin-bottom:64px;max-width:320px;font-size:24px">Natalie
                         <!-- --><br /><span style="color:#A1CAAE;font-size:48px;margin-bottom:48px">is the slayest 👑</span>
