--- a/index.html
+++ b/index.html
@@ -37,43 +37,9 @@
                 <main style="color:#232129;padding:96px;font-family:-apple-system, Roboto, sans-serif, serif">
                     <title>Slay Queen</title>
                     <link rel="icon" type="image/x-icon" href="/heart.ico">
-                    <h1 style="margin-top:0;margin-bottom:64px;max-width:320px;font-size:24px">Natalie
+                    <h1 style="margin-top:0;margin-bottom:64px;max-width:320px;font-size:24px">Website work in progress!
                         <!-- --><br /><span style="color:#A1CAAE;font-size:48px;margin-bottom:48px">is the slayest 👑</span>
                     </h1>
-                    <p style="margin-bottom:48px"><i>thank you for all the slay
-                            <!-- -->&lt;3
-                            <!-- -->
-                        </i></p>
-                    <ul style="margin-bottom:96px;padding-left:0">
-                        <li style="font-weight:300;font-size:24px;max-width:560px;margin-bottom:30px;color:#FFC0CB"><span><a style="color:#8954A8;font-weight:bold;font-size:22px;vertical-align:5%"><i>How slay?</i></a>
-                                <p style="color:#232129;font-size:14px;margin-top:10px;margin-bottom:0;line-height:1.25">too slay.</p>
-                            </span></li>
-                    </ul><img alt="❤️" />
-                    <p style="color:#232129;font-size:14px;margin-top:10px;margin-bottom:0;line-height:1.25"><i><b>ily bestie</b></i></p>
-                </main>
-            </div>
-            <div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div>
-        </div>
-        <script id="gatsby-script-loader">
-            /*<![CDATA[*/
-            window.pagePath = "/";
-            window.___webpackCompilationHash = "c222245704889c75d6d0"; /*]]>*/
-
-        </script>
-        <script id="gatsby-chunk-mapping">
-            /*<![CDATA[*/
-            window.___chunkMapping = {
-                "polyfill": ["/polyfill-3318a440039fcd65a7ba.js"],
-                "app": ["/app-22076350bbb575863665.js"],
-                "component---src-pages-404-js": ["/component---src-pages-404-js-e86e6a8658a2a168fe3b.js"],
-                "component---src-pages-index-js": ["/component---src-pages-index-js-797eddd215c8f521615e.js"]
-            }; /*]]>*/
-
-        </script>
-        <script src="/polyfill-3318a440039fcd65a7ba.js" nomodule=""></script>
-        <script src="/app-22076350bbb575863665.js" async=""></script>
-        <script src="/framework-4cef7af5a56b4b8c88d7.js" async=""></script>
-        <script src="/webpack-runtime-bac8d0b5e4acafea3895.js" async=""></script>
     </body>
 
 </html>
