--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <main style="color:#232129;padding:96px;font-family:-apple-system, Roboto, sans-serif, serif">
                     <title>Slay Queen</title>
                     <link rel="icon" type="image/x-icon" href="/heart.ico">
-                    <h1 style="margin-top:0;margin-bottom:64px;max-width:320px;font-size:24px">Website work in progress!
-                        <!-- --><br /><span style="color:#A1CAAE;font-size:48px;margin-bottom:48px">is the slayest 👑</span>
+                    <h1 style="margin-top:0;margin-bottom:64px;max-width:320px;font-size:24px">Website
+                        <!-- --><br /><span style="color:#A1CAAE;font-size:48px;margin-bottom:48px">work in progress! 👑</span>
                     </h1>
     </body>
 
